Do check if file exists manually

BUG: 342876
FIXED-IN: 5.21